# training_tasks

are_they_the_same/: CMakeLists.txt
are_they_the_same/src/: Same.cpp  Same.h  main.cpp
are_they_the_same/tests/: main_tests.cpp
build_tower/: CMakeLists.txt
build_tower/src/: BuildTower.h  main.cpp
build_tower/tests/: main_tests.cpp
consecutive_strings/: CMakeLists.txt
counting_duplicates/: CMakeLists.txt
digital_root/: CMakeLists.txt
duplicate_encoder/: CMakeLists.txt
duplicate_encoder/src/: DuplicateEncoder.h  main.cpp
duplicate_encoder/tests/: main_tests.cpp
eulers_totient_function/: CMakeLists.txt
eulers_totient_function/src/: Functions.cpp  Functions.h  main.cpp
eulers_totient_function/tests/: main_tests.cpp
fcfs_operating_system_schedulling/: CMakeLists.txt
find_the_missing_letter/: CMakeLists.txt
find_the_odd/: CMakeLists.txt
find_unique_number/: CMakeLists.txt
help_your_granny/: CMakeLists.txt
highest_scoring_word/: CMakeLists.txt
implementing_quicksort/: CMakeLists.txt
int32_to_ipv4/: CMakeLists.txt
memory_reallocation/: CMakeLists.txt
mexican_wave/: CMakeLists.txt
observed_pin/: CMakeLists.txt
operation_transformation/: CMakeLists.txt
playing_with_digits/: CMakeLists.txt
revert_a_word_in_string/: CMakeLists.txt
roman_numerals_helper/: CMakeLists.txt
simple_pig_latin/: CMakeLists.txt
snail_sort/: CMakeLists.txt
sum_dig_pow/: CMakeLists.txt
take_a_ten_minute_walk/: CMakeLists.txt
tortoise_racing/: CMakeLists.txt
tribonacci_sequence/: CMakeLists.txt
unique_in_order/: CMakeLists.txt
(+90 files in other folders)
